--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 /* Navbar Logo */
-.logo-img {
+.logo {
   width: 40px;
   height: 40px;
   object-fit: contain;
@@ -70,3 +70,4 @@ body {
 /* Autocomplete */
 #searchSuggestions .list-group-item { cursor: pointer; background-color: white; color: black; }
 #searchSuggestions .list-group-item:hover { background-color: var(--pink); color: white; }
+
